# magic-string-rs

./: .gitignore  Cargo.toml  README.md  package.json
.cargo/: config.toml
.github/workflows/: CI.yaml  Test.yaml  lint.yaml
benchmark/: bench.ts  package.json
core/: Cargo.toml  README.md
core/src/: chunk.rs  lib.rs  magic_string.rs  mapping.rs  result.rs  source_map.rs  utils.rs
core/src/utils/: locator.rs  mod.rs
core/tests/: clone.rs  generate_map.rs  indent.rs  is_empty.rs  magic_string.rs  move.rs  overwrite.rs  pend.rs  remove.rs  slice.rs  snip.rs  trim.rs
examples/: index.js
examples/wasm/: index.html  index.js  package.json
node/: Cargo.toml  binding.js  index.d.ts  index.js  index.ts  package.json  tsconfig.json
node/npm/android-arm-eabi/: README.md  package.json
node/npm/android-arm64/: README.md  package.json
node/npm/darwin-arm64/: README.md  package.json
node/npm/darwin-x64/: README.md  package.json
node/npm/freebsd-x64/: README.md  package.json
node/npm/linux-arm-gnueabihf/: README.md  package.json
node/npm/linux-arm64-gnu/: README.md  package.json
node/npm/linux-arm64-musl/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/linux-x64-musl/: README.md  package.json
node/npm/win32-arm64-msvc/: README.md  package.json
node/npm/win32-ia32-msvc/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/prof/: index.js
node/rs/: lib.rs
node/src/: MagicString.ts  index.ts  lib.rs  utils.ts
node/tests/: MagicString.spec.ts  generateMap.spec.ts
wasm/: Cargo.toml  package.json
wasm/src/: lib.rs
