[package]
authors = ["h-a-n-a <andywangsy@gmail.com>"]
name = "magic_string"
description = "magic string"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/h-a-n-a/magic-string-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vlq = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
napi = "1.8.0"

