[package]
authors = ["h-a-n-a <andywangsy@gmail.com>"]
description = "magic string"
edition = "2021"
license = "MIT"
name = "magic_string"
repository = "https://github.com/h-a-n-a/magic-string-rs"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
node-api = ["napi", "napi-derive"]

[dependencies]
base64 = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
vlq = "0.5.1"
regex = "1.4.2"

[dependencies.napi]
optional = true
version = "2.0.0-beta.5"

[dependencies.napi-derive]
optional = true
version = "2.0.0-beta.5"
