[package]
authors = ["h-a-n-a <andywangsy@gmail.com>"]
name = "magic-string-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
magic_string = { path = "../core" }
