[package]
authors = ["h-a-n-a <andywangsy@gmail.com>"]
edition = "2021"
name = "magic-string-wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
magic_string = {path = "../core"}
wasm-bindgen = "0.2.63"
